# thread_highways

./: .gitignore  CMakeLists.txt  LICENSE  README.md
deprecated/: AggregatingFutureNode.h  BufferedRetransmitter.h  FreeTimeLogic.h  FutureNode.h  HighWayParams.h  HighWaysMonitoring.h  IPublishSubscribe.h  PublishOneForManyWithConnectionsNotifier.h  ResultWaitFutureNode.h  RunBundle.h  Scheduler.h  SerialHighWay.h  SerialHighWayWithScheduler.h  SingleThreadHighWayWithScheduler.h
examples/: CMakeLists.txt
examples/channels/: CMakeLists.txt
examples/channels/buffered_retransmitter/: CMakeLists.txt
examples/channels/connections_notifier/: CMakeLists.txt
examples/channels/publish_many_for_many/: CMakeLists.txt
examples/channels/publish_many_for_many_unsubscribe/: CMakeLists.txt
examples/channels/publish_many_for_one/: CMakeLists.txt
examples/channels/publish_one_for_many/: CMakeLists.txt
examples/dson/: CMakeLists.txt
examples/dson/dson_from_buf/: CMakeLists.txt
examples/dson/from_shared_buf/: CMakeLists.txt
examples/dson/ipc/: CMakeLists.txt
examples/dson/iterate/: CMakeLists.txt
examples/dson/simple/: CMakeLists.txt
examples/dson/user_defined_type/: CMakeLists.txt
examples/exceptions/: CMakeLists.txt
examples/exceptions/signal/: CMakeLists.txt
examples/exceptions/signal/libsrc/: exceptions_lib.cpp  exceptions_lib.h
examples/exceptions/signal/mainsrc/: exceptions_signal.cpp
examples/exceptions/simple/: CMakeLists.txt
examples/execution_tree/: CMakeLists.txt
examples/execution_tree/aggregating/: CMakeLists.txt
examples/execution_tree/execution_tree_for_equation/: CMakeLists.txt
examples/execution_tree/execution_tree_for_loop/: CMakeLists.txt
examples/execution_tree/future/: CMakeLists.txt
examples/execution_tree/neural_network/: CMakeLists.txt
examples/execution_tree/simple/: CMakeLists.txt
examples/future_math/: CMakeLists.txt
examples/future_math/future_next/: CMakeLists.txt
examples/future_math/future_when_any_all/: CMakeLists.txt
examples/highways/: CMakeLists.txt
examples/highways/aba/: CMakeLists.txt
examples/highways/manager/: CMakeLists.txt
examples/highways/monitoring/: CMakeLists.txt
examples/highways/multy_thread_example/: CMakeLists.txt
examples/highways/schedule/: CMakeLists.txt
examples/highways/simple/: CMakeLists.txt
examples/highways/simple_with_protector/: CMakeLists.txt
include/thread_highways/: include_all.h
include/thread_highways/channels/: BufferedRetransmitter.h  HighWayPublisher.h  HighWayStickyPublisher.h  HighWayStickyPublisherWithConnectionsNotifier.h  IPublishSubscribe.h  ISubscription.h  PublishManyForMany.h  PublishManyForManyCanUnSubscribe.h  PublishManyForManyWithConnectionsNotifier.h  PublishManyForOne.h  PublishOneForMany.h  PublishOneForManyWithConnectionsNotifier.h  const_publisher.h  const_updatable_publisher.h  highway_publisher.h  highway_sticky_publisher.h  highway_sticky_publisher_with_connections_notifier.h  i_subscription.h  publish_many_for_one.h  publish_one_for_many.h
include/thread_highways/dson/: downloader_from_fd.h  downloader_from_shared_buf.h  downloader_from_stream.h  dson_edit_controller.h  dson_edit_controller_printer.h  dson_from_buff.h  dson_from_file.h  dson_from_file_lifetime_controller.h  i_dson.h  i_has_route_id.h  include_all.h  new_dson.h  uploader_to_buff.h  uploader_to_fd.h  uploader_to_stream.h
include/thread_highways/execution_tree/: AggregatingFutureNode.h  DefaultNode.h  (+26 more)
performance_tests/: CMakeLists.txt
performance_tests/number_of_parameters_influence/: CMakeLists.txt
performance_tests/sending_message_overhead/: CMakeLists.txt
performance_tests/task_execution_overhead/: CMakeLists.txt
performance_tests/task_execution_overhead/src/: task_execution_overhead.cpp
tests/: CMakeLists.txt
tests/channels/: CMakeLists.txt
tests/dson/: CMakeLists.txt
tests/dson/src/: test_dson_simple.cpp  test_dson_upload.cpp
tests/execution_tree/: CMakeLists.txt
tests/highways/: CMakeLists.txt
(+152 files in other folders)
